css/main.css
@import url('https://fonts.googleapis.com/css?family=Khula:400,700');
* {
	box-sizing: border-box;
}
body {
	font-family: 'Khula', sans-serif;
	margin: 0;
	padding: 0;
}

main {
	width: 100%;
	padding: 0;
}
video {
	margin: 0 auto;
}
.p-wrap {
	width: 100%;
	padding: 0 50px;
	margin: 20px 0;
}
.p-wrap p {
	margin: 0 auto;
	max-width: 95%;
}
.videoWrap {
	margin: 0 auto;
}
@media (min-width: 768px) {
	.wrapper {
		max-width: 80%;
		margin: 0 auto;
	}
}
span[data-start] {
	cursor: pointer;
}
span[data-start]:hover {
	color: tomato;
	font-weight: bold;
}
.active {
	font-weight: bold;
}
.wrapper {
	box-shadow: 0px 0px 8px #cecece;
	width: 60%;
}
footer {
	text-align: center;
	color: tomato;
	font-style: italic;
}
.mejs__inner .mejs__controls {
    background: coral;
    color: black;
}

.mejs__time-current {
    background: lightblue;
}

